<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">公路隧道结构检查系统</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="next">下一步</string>
    <string name="check_type">检查类型</string>
    <string name="BH_position">病害位置</string>
    <string name="P_level">判断描述:</string>
    <string name="Check_content">检查内容:</string>
    <string name="photopick">照片采集</string>
    <string name="record_form">检查记录表</string>
    <string name="liningBH_photo">衬砌病害展布图</string>
    <string name="liningBHrecord">衬砌病害记录表</string>
    <string name="civil_check_">土建结构检查</string>
    <string name="ELECTRICAL_FAC">机电设施检查</string>
    <string name="ele_GZ">机电故障记录表</string>
    <string name="update">上传数据</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">dd</string>
    <string name="project_msg_config">项目信息配置</string>
    <string name="main_tag">地铁病害调查系统</string>
    <string name="main_login">进入</string>
    <string name="main_exit">退出</string>
    <string name="left_tag">病害类型</string>
    <string name="zoomout">缩小</string>
    <string name="zoomin">放大</string>
    <string name="pan">平移</string>
    <string name="select">选择</string>
    <string name="delete">删除</string>
    <string name="addinfo">添加信息</string>
    <string name="identify">查看信息</string>
    <string name="deleteinfo">删除信息</string>
    <string name="ringto">跳转</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="photograph">拍照</string>
    <string name="bz">备注信息添加</string>
    <string name="xljhxx">线路几何信息设置</string>
    <string name="xzwbj">小转弯半径添加</string>
    <string name="mileagePile">位置里程添加</string>
    <string name="jgtzxx">结构特征信息设置</string>
    <string name="contactChannel">旁通道添加</string>
    <string name="bengzhan">泵站添加</string>
    <string name="steel">全环钢管片添加</string>
    <string name="flbntqy">芳纶布黏贴区域添加</string>
    <string name="tsdclx">特殊道床类型添加</string>
    <string name="sxtfb">砂性土分布添加</string>
    <string name="halfsteel">半环钢管片添加</string>
    <string name="roadline">路线</string>
    <string name="areapart">区段</string>
    <string name="tunnel">隧道</string>
    <string name="tunnel_info">隧道信息</string>
    <string name="tasks_list">任务列表</string>
    <string name="tasks_info">任务信息</string>
    <string name="welcome_use">欢  迎  使  用</string>
    <string name="net_setting">192.168.0.96:8088</string>
    <string name="net_setting_wz">服务网络设置</string>
    <string name="NetCheck">检查地址</string>
    <string name="displayall">全部显示</string>
    <string name="displaynochecked">只显示未查区域</string>
    <string name="displaychecked">只显示已查区域</string>
    <string name="reinfo">重置信息</string>
    <string name="sysname">公   路   隧   道  结  构  检  查  系  统</string>
    <string name="dbname">test1.db</string>
    <string name="dbFilename">db.sql</string>
    <string name="producebh">GLSDSCSBBHDCXT20130915</string>
    <string name="ipstr">www.geodigital.cn</string>
    <string name="title_activity_start_tunnel_actviity">StartTunnelActviity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_tunnel_acitivity">NewTunnelAcitivity</string>
    <string name="title_activity_build_fill">BuildFill</string> 
    <string name="yes">是</string>
    <string name="no">否</string>
    
    <!-- hidecheck_main.xml -->
    <string name="hideCheckTitle">安全隐患排查配置</string>
    <string name="checkProject">检查工程</string>
    <string name="checkForm">安全隐患排查记录单</string>
    
    <!-- hidecheck_add_dialog.xml -->
    <string name="checkProjectName">检查名称:</string>
    <string name="tunnelName">隧道名称:</string>
    <string name="managerUnit">管理单位:</string>
    <string name="mileage">开始桩号:</string>
    <string name="mileageend">结束桩号:</string>
    <string name="checkPerson">检查人员:</string>
    <string name="checkDate">检查日期:</string>
    <!-- hidecheck_device.xml -->
    <string name="deviceTitle">安排隐患设备排查</string>
    
    <!-- hidecheck_add_device_dialog.xml -->
    <string name="projectName">项目名称:</string>
   <string  name="section">施工标段:</string>
   <string name="unitName">单位名称:</string>
</resources>
