<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:background="@color/common_title_or_background_color"
        android:orientation="horizontal" >


        <TextView
            android:id="@+id/textViewHideCheckTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#eee"
            android:textSize="@dimen/common_title_font_size" 
            android:text="@string/hideCheckTitle"/>

        <ImageButton
            android:id="@+id/imgAdd"
            android:layout_width="@dimen/common_img_width"
            android:layout_height="@dimen/common_img_height"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:background="@drawable/add"/>
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:layout_width="0dp"
           	android:layout_height="match_parent"
           	android:layout_weight="1"
           	android:orientation="vertical">
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#9da6ab"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="@dimen/common_listview_item_font_size"
                android:textColor="@color/white_color"
                android:text="@string/checkProject"/>
            
            <ListView 
                android:id="@+id/listViewCheckProject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#dcdcdc" 
                android:listSelector="@drawable/common_button_seletor"/>
            </LinearLayout>
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#8faebf"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="@dimen/common_listview_item_font_size"
                android:textColor="@color/white_color"
                android:text="@string/checkForm" />
            
            <ListView 
                android:id="@+id/listViewCheckConent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:listSelector="@drawable/common_button_seletor"/>
        </LinearLayout>
        
    </LinearLayout>
    
 
    
</LinearLayout>
