<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addDeviceDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:background="@color/common_title_or_background_color"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:textSize="@dimen/common_general_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_txtHeight"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/projectName"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />

            <EditText
                android:id="@+id/txtAddDeviceCheckProject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_txtHeight"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/section"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />

            <EditText
                android:id="@+id/txtAddDeviceSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_txtHeight"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/unitName"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />

            <EditText
                android:id="@+id/txtAddDeviceUnit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />
        </LinearLayout>

        

 

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_txtHeight"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/checkPerson"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />

            <EditText
                android:id="@+id/txtAddDeviceCheckPerson"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_txtHeight"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/checkDate"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />

            <EditText
                android:id="@+id/txtAddDeviceCheckDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:editable="false"
                android:textColor="@color/black_color"
                android:textSize="@dimen/common_general_font_size" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/common_drak_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAddDeviceConfirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_btnHeight"
            android:layout_weight="1"
            android:background="@drawable/common_button_seletor"
            android:text="完 成" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/common_drak_grey" />

        <Button
            android:id="@+id/btnAddDeviceCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_btnHeight"
            android:layout_weight="1"
            android:background="@drawable/common_button_seletor"
            android:text="取 消" />
    </LinearLayout>
</LinearLayout>
