<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Civil_PorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Check_content" />

            <TextView
                style="@style/Civil_PorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/BH_position" />

            <TextView
                style="@style/Civil_PorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="400dp"
                android:text="@string/P_level" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ListView
            android:choiceMode="singleChoice"
            android:background="@drawable/boder_white"
            android:id="@+id/Civil_lining_listview1"
            android:layout_width="300dp"
            android:layout_height="380dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1" >
        </ListView>

        <LinearLayout
      
            android:layout_width="wrap_content"
            android:layout_height="380dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <ListView
                android:background="@drawable/boder_white"
                android:id="@+id/Civil_lining_listview2"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" >
            </ListView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="里程桩号"
                android:textSize="20dp" />
			
            <LinearLayout
                 android:background="@drawable/boder_white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
               android:id="@+id/lining_SX"
                android:textSize="20dp" />

            <LinearLayout
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    
                    android:background="@drawable/boder_white"
                    android:id="@+id/Civil_lining_Edit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="120dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="20dp" />

                <EditText
                    android:background="@drawable/boder_white"
                    android:id="@+id/Civil_lining_Edit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="120dp" />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/boder_white"
            android:layout_marginLeft="20dp"
            android:layout_width="600dp"
            android:layout_height="380dp"
            android:orientation="vertical" >

             <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    
		    android:orientation="horizontal">
   			<LinearLayout 
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:orientation="vertical">
					
                    <Button
                        android:id="@+id/Civil_Config_Level_List_Btn1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:textSize="30dp" 
                        android:visibility="gone"
                        android:text="S"/>
                    
                    <Button
                        android:id="@+id/Civil_Config_Level_List_Btn2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textSize="30dp" 
                        android:text="B"/>
                     <Button
                        android:id="@+id/Civil_Config_Level_List_Btn3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_marginTop="30dp"
                        android:textSize="30dp" 
                        android:text="A"/>
                     </LinearLayout>

   				<LinearLayout 
   				    android:layout_width="fill_parent"
   				    android:layout_height="300dp"
   				    android:orientation="vertical">
                    <RadioGroup  android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Civil_RoadBed_RadioGp"
                        >
                    <RadioButton
                        android:checked="true"
                        android:id="@+id/Civil_Config_Level_List_Rbtn1"
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
       					android:maxLength="300"
       					android:visibility="gone"
                        android:singleLine="true"
                        android:layout_gravity="center_vertical" />
            


                    <RadioButton
                        android:singleLine="true"
                        android:id="@+id/Civil_Config_Level_List_Rbtn2"
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                   		android:maxLength="300"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center_vertical" />
              
  
                   

   	                 <RadioButton
                        android:singleLine="true"
                        android:id="@+id/Civil_Config_Level_List_Rbtn3"
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                       	android:maxLength="300"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center_vertical" />
              </RadioGroup>
              </LinearLayout>
         </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="200dp"
                    android:id="@+id/Civil_lining_PhotoBtn"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="60dp"
                    android:text="@string/photopick" />

                <Button
                    android:id="@+id/Civil_lining_CommitBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="提交" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

       
            <TextView
             
                style="@style/Civil_PorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="检查结果" />

            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/Civil_lining_LiningBHphotoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="650dp"
                android:text="@string/liningBH_photo" />

            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/Civil_lining_liningRecordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/liningBHrecord" />

           <Button
                android:layout_marginTop="30dp"
                android:id="@+id/Civil_lining_CheckRecordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/record_form" />
      
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
         android:background="@drawable/boder_white"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:background="@drawable/boder_white"
            style="@style/Civil_PorTheme"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="里程桩号" />
         <TextView
             android:background="@drawable/boder_white"
            style="@style/Civil_PorTheme"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="病害类型" />
        
          <TextView
              android:background="@drawable/boder_white"
            style="@style/Civil_PorTheme"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="病害部位" />
         

        <TextView
            style="@style/Civil_PorTheme"
            android:layout_width="430dp"
            android:layout_height="40dp"
            android:background="@drawable/boder_white"
            android:text="状态描述" />

        <TextView
            android:background="@drawable/boder_white"
            style="@style/Civil_PorTheme"
            android:layout_width="150dp"
            android:layout_height="40dp"
           
            android:text="判断结论" />

        <TextView
            style="@style/Civil_PorTheme"
            android:layout_width="150dp"
            android:layout_height="40dp"
        android:background="@drawable/boder_white"
            android:text="照片编号" />

        <TextView
            style="@style/Civil_PorTheme"
            android:layout_width="100dp"
            android:layout_height="40dp"
           
          android:background="@drawable/boder_white"
            android:text="删除" />
    </LinearLayout>
	<ListView
          android:id="@+id/Civil_lining_CheckResult_Listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>
</LinearLayout>